damage mechanism & dodge accessories update
tweaked buff inflict phase of damage pipeline to after damage handling;
introduced dodge accessories;
bugfix on inappropriate code logic order (blood pact damage mechanism is not triggered if invulnerability prevents the damage event)

--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -2544,10 +2544,10 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作脱身道具
-  - §r受到伤害时回复大量潜行值
+  - §r受到伤害时回复50%潜行值
   - §r此效果有20秒冷却时间
   attributes:
-    invulnerabilityTick: 2
+    invulnerabilityTick: 5
   worth: 400000
   rarity: 2
 寂静刀鞘:
@@ -2656,9 +2656,10 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作脱身道具
-  - §r受到高于最大生命值5%伤害的攻击时触发闪避
+  - §r受到致命或高于最大生命值10%的攻击伤害时触发闪避
   - §r根据被闪避的攻击伤害，闪避有15到90秒的冷却时间
-  - §r闪避攻击时会使你获得大量的潜行值
+  - §r闪避伤害达到最大生命值50%时闪避冷却达到最大值
+  - §r闪避攻击时会使你获得75%潜行值
   - §r“光无法到达海洋深处”
   attributes:
     stealthRegenMulti: 0.12
@@ -2711,9 +2712,10 @@ Drew之翼:
   - §r[饰品]
   - §r▣算作脱身道具
   - §r▣算作潜伏增幅饰品
-  - §r受到高于最大生命值5%伤害的攻击时触发闪避
+  - §r受到致命或高于最大生命值10%的攻击伤害时触发闪避
   - §r根据被闪避的攻击伤害，闪避有15到90秒的冷却时间
-  - §r闪避攻击时会使你获得大量的潜行值
+  - §r闪避伤害达到最大生命值50%时闪避冷却达到最大值
+  - §r闪避攻击时会使你回满潜行值
   - §r“光无法到达海洋深处”
   attributes:
     stealthLimit: 20
@@ -2800,8 +2802,9 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作脱身道具
-  - §r受到高于最大生命值5%伤害的攻击时触发闪避
+  - §r受到致命或高于最大生命值10%的攻击伤害时触发闪避
   - §r根据被闪避的攻击伤害，闪避有15到90秒的冷却时间
+  - §r闪避伤害达到最大生命值50%时闪避冷却达到最大值
   attributes:
     damageMulti: 0.1
   worth: 800000
@@ -2811,8 +2814,9 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作脱身道具
-  - §r受到高于最大生命值5%伤害的攻击时触发闪避
+  - §r受到致命或高于最大生命值10%的攻击伤害时触发闪避
   - §r根据被闪避的攻击伤害，闪避有15到90秒的冷却时间
+  - §r闪避伤害达到最大生命值50%时闪避冷却达到最大值
   attributes:
     damageMulti: 0.1
     crit: 3
@@ -2824,8 +2828,9 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作脱身道具
-  - §r受到高于最大生命值5%伤害的攻击时触发闪避
+  - §r受到致命或高于最大生命值10%的攻击伤害时触发闪避
   - §r根据被闪避的攻击伤害，闪避有15到90秒的冷却时间
+  - §r闪避伤害达到最大生命值50%时闪避冷却达到最大值
   attributes:
     damageMulti: 0.15
     crit: 5
