--- a/server/plugins/Terraria/Data/buff.yml
+++ b/server/plugins/Terraria/Data/buff.yml
@@ -504,6 +504,9 @@ effects:
   饰品转换冷却:
     isBuff: false
     tooltip: 你需要稍等片刻才能再次使用饰品属性转换
+  闪避冷却:
+    isBuff: false
+    tooltip: 闪避饰品需要一段时间重振旗鼓
   圣骑士护盾:
     isBuff: true
     tooltip: 代替附近的队友承受部分伤害
